- Desenvolvimento do codigo base para a aplicação (framework)

HORAS TRABALHADAS: 8h

==========
07/01/2008
==========

- Desenvolvimento do codigo base para a aplicação (framework)

HORAS TRABALHADAS: 6h

==========
08/01/2008
==========

- Desenvolvimento do codigo base para a aplicação (framework)

HORAS TRABALHADAS: 6h

==========
09/01/2008
==========

- Desenvolvimento do codigo base para a aplicação (framework)
- Tela de Autenticação / Cadastro

HORAS TRABALHADAS: 6h

==========
12/01/2008
==========

- Tela de Autenticação / Cadastro

HORAS TRABALHADAS: 8h

==========
13/01/2008
==========

- Tela de Autenticação / Cadastro

HORAS TRABALHADAS: 7h

==========
14/01/2008
==========

- Tela de Autenticação / Cadastro / Sessao de Usuario

HORAS TRABALHADAS: 6h

==========
15/01/2008
==========

- Inclusão das seções: Notas de implementação e Instalação na documentação

HORAS TRABALHADAS: 3h

==========
16/01/2008
==========

- Inclusão da função de confirmação de cadastro
- Inclusão da função de recuperação de senha

HORAS TRABALHADAS: 11h

==========
19/01/2008
==========

- Correção de bugs e melhorias no sistema de autenticação / cadastro

HORAS TRABALHADAS: 5h

==========
20/01/2008
==========

- Correção de bugs e melhorias no sistema de autenticação / cadastro

HORAS TRABALHADAS: 3h

==========
21/01/2008
==========

- Criação de biblioteca para envio de mensagens e relay (ApplicationMailer)
- Correção de bug com UTC (time() PHP <> now() PGSQL)

HORAS TRABALHADAS: 7h

==========
22/01/2008
==========

- Edição de perfil

HORAS TRABALHADAS: 6h

==========
23/01/2008
==========

- Melhorias na UI (loading, popup)
- Correção de bugs no BASE_URL

HORAS TRABALHADAS: 4h

==========
27/01/2008
==========

- Cadastro de CMS

HORAS TRABALHADAS: 4h

==========
29/01/2008
==========

- Correção de BUGS
- Melhorias no Controller/View
- Cadastro de CMS

HORAS TRABALHADAS: 5h

==========
30/01/2008
==========

- Correção de BUGS
- Cadastro de CMS

HORAS TRABALHADAS: 9h